fix: update slotting in "sp-sidenav-item" to allow for labelling in HTML

--- a/packages/sidenav/src/sidenav-item.css
+++ b/packages/sidenav/src/sidenav-item.css
@@ -90,3 +90,7 @@ governing permissions and limitations under the License.
             )
     );
 }
+
+a ::slotted(sp-sidenav-item) {
+    display: none;
+}
