--- a/packages/menu/src/spectrum-checkmark.css
+++ b/packages/menu/src/spectrum-checkmark.css
@@ -1,4 +1,4 @@
-/*
+/* stylelint-disable */ /* 
 Copyright 2020 Adobe. All rights reserved.
 This file is licensed to you under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License. You may obtain a copy
@@ -8,38 +8,31 @@ Unless required by applicable law or agreed to in writing, software distributed 
 the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 OF ANY KIND, either express or implied. See the License for the specific language
 governing permissions and limitations under the License.
-*/
 
-@import './spectrum-checkmark.css';
-@import './spectrum-chevron.css';
-@import './spectrum-menu-item.css';
-@import './spectrum-itemLabel.css';
-
-:host([hidden]) {
+THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
+.checkmark {
+    /* .spectrum-Menu-checkmark */
+    transform: scale(1);
+    opacity: 1;
+}
+.checkmark {
+    /* .spectrum-Menu-checkmark */
     display: none;
+    align-self: flex-start;
 }
-
-#button {
-    position: absolute;
-    inset: 0;
-}
-
-::slotted([slot='value']) {
-    align-self: start;
-}
-
-:host([dir='ltr']) ::slotted([slot='value']) {
+:host([dir='ltr']) .checkmark {
+    /* [dir=ltr] .spectrum-Menu-checkmark,
+   * [dir=ltr] .spectrum-Menu-chevron */
     margin-left: var(--spectrum-listitem-icon-gap);
 }
-
-:host([dir='rtl']) ::slotted([slot='value']) {
+:host([dir='rtl']) .checkmark {
+    /* [dir=rtl] .spectrum-Menu-checkmark,
+   * [dir=rtl] .spectrum-Menu-chevron */
     margin-right: var(--spectrum-listitem-icon-gap);
 }
-
-:host([dir='ltr']) [icon-only]::slotted(:last-of-type) {
-    margin-right: auto;
-}
-
-:host([dir='rtl']) [icon-only]::slotted(:last-of-type) {
-    margin-left: auto;
+.checkmark {
+    /* .spectrum-Menu-checkmark,
+   * .spectrum-Menu-chevron */
+    flex-grow: 0;
+    margin-top: var(--spectrum-listitem-icon-margin-top);
 }
