--- a/packages/picker/src/spectrum-picker.css
+++ b/packages/picker/src/spectrum-picker.css
@@ -436,27 +436,27 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
 :host([dir='ltr']) .spectrum-Picker-popover--quiet {
     /* [dir=ltr] .spectrum-Picker-popover--quiet */
     margin-left: calc(
-        -1 * (var(
-                        --spectrum-picker-quiet-m-popover-offset-x,
-                        var(--spectrum-global-dimension-size-150)
-                    ) +
-                    var(
-                        --spectrum-popover-border-size,
-                        var(--spectrum-alias-border-size-thin)
-                    ))
+        var(
+                --spectrum-picker-quiet-m-popover-offset-x,
+                var(--spectrum-global-dimension-size-150)
+            ) * -1 +
+            var(
+                --spectrum-popover-border-size,
+                var(--spectrum-alias-border-size-thin)
+            ) * -1
     );
 }
 :host([dir='rtl']) .spectrum-Picker-popover--quiet {
     /* [dir=rtl] .spectrum-Picker-popover--quiet */
     margin-right: calc(
-        -1 * (var(
-                        --spectrum-picker-quiet-m-popover-offset-x,
-                        var(--spectrum-global-dimension-size-150)
-                    ) +
-                    var(
-                        --spectrum-popover-border-size,
-                        var(--spectrum-alias-border-size-thin)
-                    ))
+        var(
+                --spectrum-picker-quiet-m-popover-offset-x,
+                var(--spectrum-global-dimension-size-150)
+            ) * -1 +
+            var(
+                --spectrum-popover-border-size,
+                var(--spectrum-alias-border-size-thin)
+            ) * -1
     );
 }
 #button {
