--- a/packages/action-button/src/spectrum-action-button.css
+++ b/packages/action-button/src/spectrum-action-button.css
@@ -427,15 +427,15 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
 :host([dir='ltr']) ::slotted([slot='icon']) {
     /* [dir=ltr] .spectrum-ActionButton .spectrum-Icon */
     margin-left: calc(
-        -1 * (var(--spectrum-actionbutton-textonly-padding-left-adjusted) -
-                    var(--spectrum-actionbutton-padding-left-adjusted))
+        var(--spectrum-actionbutton-textonly-padding-left-adjusted) * -1 -
+            var(--spectrum-actionbutton-padding-left-adjusted) * -1
     );
 }
 :host([dir='rtl']) ::slotted([slot='icon']) {
     /* [dir=rtl] .spectrum-ActionButton .spectrum-Icon */
     margin-right: calc(
-        -1 * (var(--spectrum-actionbutton-textonly-padding-left-adjusted) -
-                    var(--spectrum-actionbutton-padding-left-adjusted))
+        var(--spectrum-actionbutton-textonly-padding-left-adjusted) * -1 -
+            var(--spectrum-actionbutton-padding-left-adjusted) * -1
     );
 }
 :host([dir='ltr']) slot[name='icon'] + #label {
@@ -460,12 +460,12 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
     /* .spectrum-ActionButton .spectrum-ActionButton-hold+.spectrum-Icon,
    * .spectrum-ActionButton .spectrum-Icon:only-child */
     margin-left: calc(
-        -1 * (var(--spectrum-actionbutton-textonly-padding-left-adjusted) -
-                    var(--spectrum-actionbutton-icononly-padding-left-adjusted))
+        var(--spectrum-actionbutton-textonly-padding-left-adjusted) * -1 -
+            var(--spectrum-actionbutton-icononly-padding-left-adjusted) * -1
     );
     margin-right: calc(
-        -1 * (var(--spectrum-actionbutton-textonly-padding-right-adjusted) -
-                    var(--spectrum-actionbutton-icononly-padding-right-adjusted))
+        var(--spectrum-actionbutton-textonly-padding-right-adjusted) * -1 -
+            var(--spectrum-actionbutton-icononly-padding-right-adjusted) * -1
     );
 }
 #label {
