--- a/packages/color-area/src/spectrum-color-area.css
+++ b/packages/color-area/src/spectrum-color-area.css
@@ -37,10 +37,16 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
             ) * 2
     );
     margin-left: calc(
-        -1 * var(--spectrum-colorhandle-size, var(--spectrum-global-dimension-size-200))
+        var(
+                --spectrum-colorhandle-size,
+                var(--spectrum-global-dimension-size-200)
+            ) * -1
     );
     margin-top: calc(
-        -1 * var(--spectrum-colorhandle-size, var(--spectrum-global-dimension-size-200))
+        var(
+                --spectrum-colorhandle-size,
+                var(--spectrum-global-dimension-size-200)
+            ) * -1
     );
 }
 :host {
