--- a/packages/color-handle/src/spectrum-color-handle.css
+++ b/packages/color-handle/src/spectrum-color-handle.css
@@ -38,10 +38,16 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
             ) * 2
     );
     margin-left: calc(
-        -1 * var(--spectrum-colorhandle-size, var(--spectrum-global-dimension-size-200))
+        var(
+                --spectrum-colorhandle-size,
+                var(--spectrum-global-dimension-size-200)
+            ) * -1
     );
     margin-top: calc(
-        -1 * var(--spectrum-colorhandle-size, var(--spectrum-global-dimension-size-200))
+        var(
+                --spectrum-colorhandle-size,
+                var(--spectrum-global-dimension-size-200)
+            ) * -1
     );
 }
 :host {
@@ -59,16 +65,16 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
         var(--spectrum-global-dimension-size-200)
     );
     margin-left: calc(
-        -1 * var(
+        var(
                 --spectrum-colorhandle-size,
                 var(--spectrum-global-dimension-size-200)
-            ) / 2
+            ) * -1 / 2
     );
     margin-top: calc(
-        -1 * var(
+        var(
                 --spectrum-colorhandle-size,
                 var(--spectrum-global-dimension-size-200)
-            ) / 2
+            ) * -1 / 2
     );
     border-width: var(
         --spectrum-colorhandle-inner-border-size,
@@ -89,10 +95,12 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
                     var(--spectrum-colorhandle-background-offset)
             )
             calc(
-                -1 * var(--spectrum-colorhandle-checkerboard-size) + var(--spectrum-colorhandle-background-offset)
+                var(--spectrum-colorhandle-checkerboard-size) * -1 +
+                    var(--spectrum-colorhandle-background-offset)
             ),
         calc(
-                -1 * var(--spectrum-colorhandle-checkerboard-size) + var(--spectrum-colorhandle-background-offset)
+                var(--spectrum-colorhandle-checkerboard-size) * -1 +
+                    var(--spectrum-colorhandle-background-offset)
             )
             var(--spectrum-colorhandle-background-offset);
     transition: width var(--spectrum-colorhandle-animation-duration)
@@ -135,7 +143,7 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
 :host {
     /* .spectrum-ColorHandle */
     --spectrum-colorhandle-background-offset: calc(
-        -1 * var(--spectrum-global-dimension-static-size-25, 2px)
+        var(--spectrum-global-dimension-static-size-25, 2px) * -1
     );
     --spectrum-colorhandle-checkerboard-size: var(
         --spectrum-global-dimension-static-size-100,
