--- a/packages/color-wheel/src/spectrum-color-wheel.css
+++ b/packages/color-wheel/src/spectrum-color-wheel.css
@@ -33,10 +33,16 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
             ) * 2
     );
     margin-left: calc(
-        -1 * var(--spectrum-colorhandle-size, var(--spectrum-global-dimension-size-200))
+        var(
+                --spectrum-colorhandle-size,
+                var(--spectrum-global-dimension-size-200)
+            ) * -1
     );
     margin-top: calc(
-        -1 * var(--spectrum-colorhandle-size, var(--spectrum-global-dimension-size-200))
+        var(
+                --spectrum-colorhandle-size,
+                var(--spectrum-global-dimension-size-200)
+            ) * -1
     );
 }
 .slider {
