--- a/packages/styles/core-global.css
+++ b/packages/styles/core-global.css
@@ -13,6 +13,7 @@ governing permissions and limitations under the License.
 /* stylelint-disable */
 :host,
 :root {
+    /* spectrum-animationGlobals.css */
     --spectrum-global-animation-duration-0: 0ms;
     --spectrum-global-animation-duration-100: 130ms;
     --spectrum-global-animation-duration-200: 160ms;
@@ -30,6 +31,8 @@ governing permissions and limitations under the License.
     --spectrum-global-animation-ease-in: cubic-bezier(0.5, 0, 1, 1);
     --spectrum-global-animation-ease-out: cubic-bezier(0, 0, 0.4, 1);
     --spectrum-global-animation-linear: cubic-bezier(0, 0, 1, 1);
+
+    /* spectrum-colorGlobals.css */
     --spectrum-global-color-status: Verified;
     --spectrum-global-color-version: 5.1;
     --spectrum-global-color-static-black: #000;
@@ -136,6 +139,8 @@ governing permissions and limitations under the License.
     --spectrum-global-color-opacity-6: 0.06;
     --spectrum-global-color-opacity-5: 0.05;
     --spectrum-global-color-opacity-4: 0.04;
+
+    /* spectrum-colorSemantics.css */
     --spectrum-semantic-negative-color-background: var(
         --spectrum-global-color-static-red-700
     );
@@ -347,6 +352,8 @@ governing permissions and limitations under the License.
     --spectrum-semantic-presence-color-8: var(
         --spectrum-global-color-static-fuchsia-600
     );
+
+    /* spectrum-dimensionGlobals.css */
     --spectrum-global-dimension-static-size-0: 0px;
     --spectrum-global-dimension-static-size-10: 1px;
     --spectrum-global-dimension-static-size-25: 2px;
@@ -415,6 +422,8 @@ governing permissions and limitations under the License.
     --spectrum-global-dimension-static-grid-columns: 12;
     --spectrum-global-dimension-static-grid-fluid-width: 100%;
     --spectrum-global-dimension-static-grid-fixed-max-width: 1280px;
+
+    /* spectrum-fontGlobals.css */
     --spectrum-global-font-family-base: adobe-clean, 'Source Sans Pro',
         -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu,
         'Trebuchet MS', 'Lucida Grande', sans-serif;
@@ -441,6 +450,8 @@ governing permissions and limitations under the License.
     --spectrum-global-font-line-height-small: 1.3;
     --spectrum-global-font-multiplier-25: 0.25em;
     --spectrum-global-font-multiplier-75: 0.75em;
+
+    /* spectrum-staticAliases.css */
     --spectrum-alias-border-size-thin: var(
         --spectrum-global-dimension-static-size-10
     );
@@ -724,6 +735,7 @@ governing permissions and limitations under the License.
 }
 :host,
 :root {
+    /* spectrum-dimensionAliases.css */
     --spectrum-alias-dropshadow-blur: var(--spectrum-global-dimension-size-50);
     --spectrum-alias-dropshadow-offset-y: var(
         --spectrum-global-dimension-size-10
@@ -1120,6 +1132,7 @@ governing permissions and limitations under the License.
 }
 :host,
 :root {
+    /* spectrum-colorAliases.css */
     --spectrum-alias-background-color-default: var(
         --spectrum-global-color-gray-100
     );
