--- a/packages/thumbnail/src/spectrum-thumbnail.css
+++ b/packages/thumbnail/src/spectrum-thumbnail.css
@@ -37,8 +37,8 @@ THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
     background-position: 0 0,
         0 var(--spectrum-global-dimension-static-size-100, 8px),
         var(--spectrum-global-dimension-static-size-100, 8px)
-            calc(-1 * var(--spectrum-global-dimension-static-size-100, 8px)),
-        calc(-1 * var(--spectrum-global-dimension-static-size-100, 8px)) 0;
+            calc(var(--spectrum-global-dimension-static-size-100, 8px) * -1),
+        calc(var(--spectrum-global-dimension-static-size-100, 8px) * -1) 0;
 }
 :host:before {
     /* .spectrum-Thumbnail:before */
